hphp/hack/test/typecheck/is_expression/dynamic.php.exp
File "dynamic.php", line 5, characters 16-17:
Invalid argument (Typing[4110])
  File "dynamic.php", line 10, characters 21-23:
  This is an int
  File "dynamic.php", line 4, characters 13-19:
  It is incompatible with a dynamic value
